Fix a number of focus related issues
1. Upon (re-)opening a category view, the focus is now on the category title instead of the first card. This is to prevent scroll jump on mobile devices (as even the first card is partially out of view on small screens).
2. Upon attempts to re-open the same category view (via main menu), or when opening and closing the hamburger button when the gallery is active, the focus on the previously opened/focused card is cleared. Again to prevent scroll jump.

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -105,6 +105,8 @@ body {
 
     &:before { content: " / "; }
 
+    &:focus { outline: none; }
+
     @media #{$max-screen-s} {
         left: 8%;
         top: 95px;
